--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "kickstart",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@truffle/hdwallet-provider": "^1.7.0",
-    "dotenv": "^16.0.1",
-    "fs-extra": "^10.0.0",
-    "ganache-cli": "^6.12.2",
-    "mocha": "^9.1.2",
-    "solc": "^0.4.17",
-    "web3": "^1.6.0"
-  }
+	"name": "kickstart",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "mocha",
+		"dev": "next dev"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@truffle/hdwallet-provider": "^1.7.0",
+		"dotenv": "^16.0.1",
+		"fs-extra": "^10.0.0",
+		"ganache-cli": "^6.12.2",
+		"mocha": "^9.1.2",
+		"next": "^12.1.6",
+		"react": "^18.1.0",
+		"react-dom": "^18.1.0",
+		"solc": "^0.4.17",
+		"web3": "^1.6.0"
+	}
 }
