--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "mocha",
-		"dev": "next dev"
+		"dev": "node server.js"
 	},
 	"author": "",
 	"license": "ISC",
@@ -16,8 +16,10 @@
 		"ganache-cli": "^6.12.2",
 		"mocha": "^9.1.2",
 		"next": "^12.1.6",
+		"next-routes": "^1.4.2",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
+		"semantic-ui-react": "^2.1.2",
 		"solc": "^0.4.17",
 		"web3": "^1.6.0"
 	}
